"Hide" category, tag and comment links
"Hide" category, tag and comment links for home.php. When featured image is not used, there is not enough of space to display all. Content, title and date should be more than enough. "Edit" link stays :)

P.S. Cleared with Mario before committing.

--- a/style.css
+++ b/style.css
@@ -1718,6 +1718,12 @@ figure {
     clear: both;
 }
 
+.masonry .cat-links,
+.masonry .tag-links,
+.masonry .comments-links {
+    display: none;
+}
+
 .content-area {
     float: right;
     width: 100%;
