New theme description
Masonry needs to be more descriptive :) If you find any errors please adjust accordingly.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ Theme Name: Masonry
 Theme URI: http://devrix.com/themes/masonry/
 Author: devrix
 Author URI: http://devrix.com/
-Description: Elegant, one-column and super simple to set up theme designed by Emil Uzelac. I'll make your site look awesome!
+Description: Masonry style layout is a popular and efficient theme to show all types of visual elements quickly. 
+Grid-based structure is suitable for creatives, photographers or bloggers. Although its nice interface and features 
+make it an ideal WordPress theme for almost anything. Look nice on any device with our latest responsive, mobile-first design 
+techniques. Theme also features custom header and background, custom menus, social icons and featured images.
 Version: 1.1.0
 License: GNU General Public License v2 or higher
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
