Update theme to version 1.1.1 with few styling fixes

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: Masonry style layout is a popular and efficient theme to show all t
 Grid-based structure is suitable for creatives, photographers or bloggers. Although its nice interface and features 
 make it an ideal WordPress theme for almost anything. Look nice on any device with our latest responsive, mobile-first design 
 techniques. Theme also features custom header and background, custom menus, social icons and featured images.
-Version: 1.1.0
+Version: 1.1.1
 License: GNU General Public License v2 or higher
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: masonry
@@ -539,7 +539,6 @@ table,
 blockquote,
 .wp-caption,
 .entry-meta,
-.entry-footer,
 .comment-body,
 .footer-menu,
 .page-links,
@@ -578,13 +577,13 @@ blockquote,
     padding-bottom: 35px;
 }
 
-.sidr,
-.page-links,
-.site-header,
-.site-content,
-.entry-footer,
-.comments-title,
-.comment-reply-title {
+.single .sidr,
+.single .page-links,
+.single .site-header,
+.single .site-content,
+.single .entry-footer,
+.single .comments-title,
+.single .comment-reply-title {
     padding-top: 35px;
 }
 
@@ -1378,6 +1377,10 @@ figure {
     padding: 0;
 }
 
+.masonry .hentry {
+	margin: 0 10px 20px;
+}
+
 .masonry .hentry:not(.has-post-thumbnail) {
     background-color: #fff;
     padding: 20px;
@@ -1722,7 +1725,7 @@ figure {
 }
 
 .masonry .cat-links,
-.masonry .tag-links,
+.masonry .tags-links,
 .masonry .comments-links {
     display: none;
 }
