Update theme description

--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@ Theme Name: Masonry
 Theme URI: http://devrix.com/themes/masonry/
 Author: devrix
 Author URI: http://devrix.com/
-Description: Masonry style layout is a popular and efficient theme to show all types of visual elements quickly. 
-Grid-based structure is suitable for creatives, photographers or bloggers. Although its nice interface and features 
-make it an ideal WordPress theme for almost anything. Look nice on any device with our latest responsive, mobile-first design 
-techniques. Theme also features custom header and background, custom menus, social icons and featured images.
+Description: Our Masonry theme is based on the popular and efficient grid library, suitable for creatives, photographers or bloggers. 
+Although its nice interface and features make it an ideal WordPress theme for almost anything, Masonry has been optimized for all 
+devices thanks to our latest responsive, mobile-first design techniques.
 Version: 1.1.1
 License: GNU General Public License v2 or higher
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
